--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jquery.easing": "^1.4.1"
     },
     "devDependencies": {
+	"jquery": "^3.0.5",
         "browser-sync": "2.26.7",
         "del": "5.1.0",
         "gulp": "4.0.2",
